tests/expectations/compiler/finalize/get_incorrect_type_fail.out
Error [ETYC0372031]: A mapping's value cannot be a record
    --> compiler-test:9:5
     |
   9 |     mapping tokens: address => Token;
     |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
Error [ETYC0372117]: Expected type `address` but type `bool` was found.
    --> compiler-test:16:30
     |
  16 |         Mapping::get(tokens, true);
     |                              ^^^^
Error [ETYC0372117]: Expected type `address` but type `bool` was found.
    --> compiler-test:17:20
     |
  17 |         tokens.get(true);
     |                    ^^^^
Error [ETYC0372117]: Expected type `address` but type `u8` was found.
    --> compiler-test:18:31
     |
  18 |         Mapping::get(amounts, 1u8);
     |                               ^^^
Error [ETYC0372117]: Expected type `address` but type `u8` was found.
    --> compiler-test:19:21
     |
  19 |         amounts.get(1u8);
     |                     ^^^
